fix: add tslib to devDependencies

--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "rollup-plugin-uglify": "^6.0.4",
     "tailwindcss": "^3.2.1",
     "ts-loader": "^9.2.3",
+    "tslib": "^2.4.1",
     "typescript": "^4.3.2",
     "webpack": "^5.40.0"
   }
